--- a/src/app/components/presentational/products-list-view/products-list-view.component.scss
+++ b/src/app/components/presentational/products-list-view/products-list-view.component.scss
@@ -1,30 +1,13 @@
+@use "../../../../styles/mixins.scss" as mixins;
+
+@include mixins.items-table;
+
 .products-header {
-    display: flex;
-    align-items: center; 
-    padding-bottom: 10%;
-  
-    .products-actions{
-      margin-left: auto;
-    }
-  }
+  display: flex;
+  align-items: center;
+  padding-bottom: 10%;
 
-  table {
-    border-style: solid;
+  .products-actions {
+    margin-left: auto;
   }
-
-  tr {
-    &:first-child{
-      font-weight: bold;
-    }
-  }
-  
-  td {
-    padding: 10px 60px 10px 5px;
-    border: 1px solid black;
-  }
-
-  .td-btn {
-    padding: 0;
-    text-align: center;
-    vertical-align: middle;
-  }
+}
