--- a/src/app/modules/shopping-cart/components/presentational/shopping-cart-details-view/shopping-cart-details-view.component.scss
+++ b/src/app/modules/shopping-cart/components/presentational/shopping-cart-details-view/shopping-cart-details-view.component.scss
@@ -1,31 +1,13 @@
+@use "../../../../../../styles/mixins.scss" as mixins;
+
+@include mixins.items-table;
+
 .cart-header {
   display: flex;
-  align-items: center; 
+  align-items: center;
   padding-bottom: 10%;
 
-  button{
+  button {
     margin-left: auto;
   }
-}
-
-
-table {
-  border-style: solid;
-}
-
-tr {
-  &:first-child{
-    font-weight: bold;
-  }
-}
-
-td {
-  padding: 10px 60px 10px 5px;
-  border: 1px solid black;
-}
-
-.td-btn {
-  padding: 0;
-  text-align: center;
-  vertical-align: middle;
 }
