Chapter 7: Routing & Chapter 8: Services and HTTP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div style="display: flex; justify-content: center">
-  <!-- <app-products-details></app-products-details> -->
-  <!-- <app-products-list></app-products-list> -->
-
-  <app-shopping-cart-details></app-shopping-cart-details>
+  <router-outlet></router-outlet>
 </div>
