--- a/src/app/components/containers/products-list/products-list.component.html
+++ b/src/app/components/containers/products-list/products-list.component.html
@@ -1,6 +1,6 @@
 <app-products-list-view
-  [products]="products"
-  (onAddToCart)="onAddToCart()"
+  [products]="(products$ | async) || []"
+  (onClickCart)="onClickCart()"
   (onCreateProduct)="onCreateProduct()"
-  (onProductClick)="onProductClick()"
+  (onProductClick)="onProductClick($event)"
 ></app-products-list-view>
