--- a/src/app/modules/shopping-cart/components/containers/shopping-cart-details/shopping-cart-details.component.html
+++ b/src/app/modules/shopping-cart/components/containers/shopping-cart-details/shopping-cart-details.component.html
@@ -2,6 +2,6 @@
   [cartProducts]="cartProducts"
   (onDeleteFromCart)="onDeleteFromCart($event)"
   (onCheckout)="onCheckout()"
-  (onQuantityIncrease)="onQuantityIncrease()"
-  (onQuantityDecrease)="onQuantityDecrease()"
+  (onQuantityIncrease)="onQuantityIncrease($event)"
+  (onQuantityDecrease)="onQuantityDecrease($event)"
 ></app-shopping-cart-details-view>
