--- a/src/app/components/containers/confirm-delete-dialog/confirm-delete-dialog.component.html
+++ b/src/app/components/containers/confirm-delete-dialog/confirm-delete-dialog.component.html
@@ -1,1 +1,1 @@
-<app-confirm-delete-dialog-view (onConfirm)="onConfirm()"></app-confirm-delete-dialog-view>
+<app-confirm-delete-dialog-view (onConfirm)="onConfirm($event)"></app-confirm-delete-dialog-view>
