--- a/src/app/components/containers/products-details/products-details.component.html
+++ b/src/app/components/containers/products-details/products-details.component.html
@@ -1,5 +1,8 @@
-<app-products-details-view
-  [product]="product"
-  (onDelete)="onDelete()"
-  (onEdit)="onEdit()"
-></app-products-details-view>
+<div *ngIf="product$ | async as product">
+  <app-products-details-view
+    [product]="product"
+    (onDelete)="onDelete(product.id, product.name)"
+    (onEdit)="onEdit()"
+    (onAddToCart)="onAddToCart(product)"
+  ></app-products-details-view>
+</div>
