--- a/src/app/components/presentational/confirm-delete-dialog-view/confirm-delete-dialog-view.component.html
+++ b/src/app/components/presentational/confirm-delete-dialog-view/confirm-delete-dialog-view.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>No</button>
-  <button mat-button (click)="onConfirm.emit()">Yes</button>
+  <button mat-button (click)="onConfirm.emit(data.productId)">Yes</button>
 </div>
