--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-user-navigation></app-user-navigation>
 <div style="display: flex; justify-content: center">
   <router-outlet></router-outlet>
 </div>
