--- a/src/app/components/containers/products-list/products-list.component.html
+++ b/src/app/components/containers/products-list/products-list.component.html
@@ -1,5 +1,7 @@
 <app-products-list-view
   [products]="(products$ | async) || []"
+  [isAdmin]="(isAdmin$ | async) || false"
+  [isCustomer]="(isCustomer$ | async) || false"
   (onClickCart)="onClickCart()"
   (onCreateProduct)="onCreateProduct()"
   (onProductClick)="onProductClick($event)"
