--- a/src/app/components/containers/products-details/products-details.component.html
+++ b/src/app/components/containers/products-details/products-details.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="product$ | async as product">
   <app-products-details-view
     [product]="product"
-    [isAdmin]="(isAdmin$ | async) || undefined"
-    [isCustomer]="(isCustomer$ | async) || undefined"
+    [isAdmin]="(isAdmin$ | async) || false"
+    [isCustomer]="(isCustomer$ | async) || false"
     (onDelete)="onDelete(product.id, product.name)"
     (onEdit)="onEdit(product.id)"
     (onAddToCart)="onAddToCart(product)"
