--- a/src/app/components/containers/products-list/products-list.component.html
+++ b/src/app/components/containers/products-list/products-list.component.html
@@ -2,6 +2,7 @@
   [products]="(products$ | async) || []"
   [isAdmin]="(isAdmin$ | async) || false"
   [isCustomer]="(isCustomer$ | async) || false"
+  [isLoading]="(isLoading$ | async) || false"
   (onClickCart)="onClickCart()"
   (onCreateProduct)="onCreateProduct()"
   (onProductClick)="onProductClick($event)"
