--- a/src/app/components/presentational/products-details-view/products-details-view.component.html
+++ b/src/app/components/presentational/products-details-view/products-details-view.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="product">
-  <div class="product-header">
+  <div class="content-header">
     <h1>Product: {{ product.name }}</h1>
-    <div class="product-actions">
+    <div class="header-actions">
       <app-icon-button
         *ngIf="isCustomer"
         [type]="'add_shopping_cart'"
