--- a/src/app/components/presentational/products-list-view/products-list-view.component.html
+++ b/src/app/components/presentational/products-list-view/products-list-view.component.html
@@ -1,9 +1,9 @@
-<div class="products-header">
+<div class="content-header">
   <h1>Products</h1>
   <div *ngIf="isLoading" class="spinner-wrapper">
     <mat-spinner diameter="40"></mat-spinner>
   </div>
-  <div class="products-actions">
+  <div class="header-actions">
     <app-icon-button
       *ngIf="isCustomer"
       [type]="'shopping_cart'"
@@ -18,23 +18,38 @@
     ></app-icon-button>
   </div>
 </div>
-<table>
-  <tr>
-    <td>Category</td>
-    <td>Product Name</td>
-    <td>Price</td>
-    <td></td>
-  </tr>
-  <tr *ngFor="let product of products">
-    <td>{{ product.category }}</td>
-    <td>{{ product.name }}</td>
-    <td>{{ product.price }} RON</td>
-    <td class="td-btn">
+
+<table mat-table [dataSource]="products" class="mat-elevation-z8">
+  <!-- Category Column -->
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef>Category</th>
+    <td mat-cell *matCellDef="let product">{{ product.category }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let product">{{ product.name }}</td>
+  </ng-container>
+
+  <!-- Price Column -->
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let product">{{ product.price }}</td>
+  </ng-container>
+
+  <!-- Action Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let product">
       <app-icon-button
         [type]="'keyboard_arrow_right'"
         [color]="'accent'"
         (onClick)="onProductClick.emit(product.id)"
       ></app-icon-button>
     </td>
-  </tr>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
