--- a/src/app/modules/shopping-cart/components/presentational/shopping-cart-details-view/shopping-cart-details-view.component.html
+++ b/src/app/modules/shopping-cart/components/presentational/shopping-cart-details-view/shopping-cart-details-view.component.html
@@ -1,42 +1,66 @@
-<div class="cart-header">
+<div class="content-header">
   <h1>Shopping Cart</h1>
-  <button mat-flat-button color="primary" (click)="onCheckout.emit()">
-    CHECKOUT
-  </button>
+  <div class="header-actions">
+    <button mat-flat-button color="primary" (click)="onCheckout.emit()">
+      CHECKOUT
+    </button>
+  </div>
 </div>
-<div *ngIf="cartProducts">
-  <table>
-    <tr>
-      <td>Category</td>
-      <td>Product Name</td>
-      <td>Price</td>
-      <td>Quantity</td>
-      <td></td>
-    </tr>
-    <tr *ngFor="let cartProduct of cartProducts">
-      <td>{{ cartProduct.product.category }}</td>
-      <td>{{ cartProduct.product.name }}</td>
-      <td>{{ cartProduct.product.price }} RON</td>
-      <td class="td-btn">
-        <app-icon-button
-          [type]="'arrow_upward'"
-          [color]="'primary'"
-          (onClick)="onQuantityIncrease.emit(cartProduct.product.id)"
-        ></app-icon-button>
-        {{ cartProduct.quantity }}
-        <app-icon-button
-          [type]="'arrow_downward'"
-          [color]="'primary'"
-          (onClick)="onQuantityDecrease.emit(cartProduct.product.id)"
-        ></app-icon-button>
-      </td>
-      <td class="td-btn">
-        <app-icon-button
-          [type]="'close'"
-          [color]="'warn'"
-          (onClick)="onDeleteFromCart.emit(cartProduct.product.id)"
-        ></app-icon-button>
-      </td>
-    </tr>
-  </table>
-</div>
+<table mat-table [dataSource]="cartProducts" class="mat-elevation-z8">
+  <!-- Category Column -->
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef>Category</th>
+    <td mat-cell *matCellDef="let cartProduct">
+      {{ cartProduct.product.category }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Product Name</th>
+    <td mat-cell *matCellDef="let cartProduct">
+      {{ cartProduct.product.name }}
+    </td>
+  </ng-container>
+
+  <!-- Price Column -->
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let cartProduct">
+      {{ cartProduct.product.price }}
+    </td>
+  </ng-container>
+
+  <!-- Quantity Column -->
+  <ng-container matColumnDef="quantity">
+    <th mat-header-cell *matHeaderCellDef>Quantity</th>
+    <td mat-cell *matCellDef="let cartProduct">
+      <app-icon-button
+        [type]="'arrow_upward'"
+        [color]="'primary'"
+        (onClick)="onQuantityIncrease.emit(cartProduct.product.id)"
+      ></app-icon-button>
+      {{ cartProduct.quantity }}
+      <app-icon-button
+        [type]="'arrow_downward'"
+        [color]="'primary'"
+        (onClick)="onQuantityDecrease.emit(cartProduct.product.id)"
+      ></app-icon-button>
+    </td>
+  </ng-container>
+
+  <!-- Delete Column -->
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let cartProduct">
+      <app-icon-button
+        [type]="'close'"
+        [color]="'warn'"
+        (onClick)="onDeleteFromCart.emit(cartProduct.product.id)"
+      ></app-icon-button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
