--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,23 +1,13 @@
-@mixin items-table {
-    table {
-        border-style: solid;
-    }
+@mixin content-header-with-actions {
+    .content-header {
+        display: flex;
+        align-items: center;
+        padding-bottom: 2%;
+        min-width: 70vh;
 
-    tr {
-        &:first-child {
-            font-weight: bold;
+        .header-actions {
+            margin-left: auto;
         }
-    }
-
-    td {
-        padding: 10px 60px 10px 5px;
-        border: 1px solid black;
-    }
-
-    .td-btn {
-        padding: 0;
-        text-align: center;
-        vertical-align: middle;
     }
 }
 
