--- a/src/app/modules/user/components/presentational/user-navigation-view/user-navigation-view.component.html
+++ b/src/app/modules/user/components/presentational/user-navigation-view/user-navigation-view.component.html
@@ -2,13 +2,15 @@
   <span>Online Shop</span>
   <div class="user-actions">
     <div *ngIf="username" class="login-actions">
-      <span>Hi, {{ username }}!</span>
-      <button mat-button (click)="onLogout.emit()">Logout</button>
+      <span i18n>Hi, {{ username }}!</span>
+      <button i18n mat-button (click)="onLogout.emit()">Logout</button>
     </div>
     <div *ngIf="!username" class="login-actions">
-      <button mat-button (click)="onLogin.emit()">Login</button>
+      <button i18n mat-button (click)="onLogin.emit()">Login</button>
     </div>
-    <button mat-button (click)="onHome.emit()">Home</button>
-    <button *ngIf="isAdmin" mat-button (click)="onAddProduct.emit()">Add product</button>
+    <button i18n mat-button (click)="onHome.emit()">Home</button>
+    <button i18n *ngIf="isAdmin" mat-button (click)="onAddProduct.emit()"
+      >Add product</button
+    >
   </div>
 </mat-toolbar>
