--- a/src/app/components/presentational/confirm-delete-dialog-view/confirm-delete-dialog-view.component.html
+++ b/src/app/components/presentational/confirm-delete-dialog-view/confirm-delete-dialog-view.component.html
@@ -1,8 +1,10 @@
 <h1 mat-dialog-title>Confirm</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to remove the "{{ data.productName }}" product?</p>
+  <p i18n
+    >Are you sure you want to remove the "{{ data.productName }}" product?</p
+  >
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button (click)="onConfirm.emit(data.productId)">Yes</button>
+  <button i18n mat-button mat-dialog-close>No</button>
+  <button i18n mat-button (click)="onConfirm.emit(data.productId)">Yes</button>
 </div>
