--- a/src/app/components/presentational/products-list-view/products-list-view.component.html
+++ b/src/app/components/presentational/products-list-view/products-list-view.component.html
@@ -1,5 +1,5 @@
 <div class="content-header">
-  <h1>Products</h1>
+  <h1 i18n>Products</h1>
   <div *ngIf="isLoading" class="spinner-wrapper">
     <mat-spinner diameter="40"></mat-spinner>
   </div>
@@ -22,19 +22,19 @@
 <table mat-table [dataSource]="products" class="mat-elevation-z8">
   <!-- Category Column -->
   <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef>Category</th>
+    <th i18n mat-header-cell *matHeaderCellDef>Category</th>
     <td mat-cell *matCellDef="let product">{{ product.category }}</td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <th i18n mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let product">{{ product.name }}</td>
   </ng-container>
 
   <!-- Price Column -->
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <th i18n mat-header-cell *matHeaderCellDef>Price</th>
     <td mat-cell *matCellDef="let product">{{ product.price }}</td>
   </ng-container>
 
