--- a/src/app/modules/user/components/presentational/user-login-view/user-login-view.component.html
+++ b/src/app/modules/user/components/presentational/user-login-view/user-login-view.component.html
@@ -1,10 +1,11 @@
 <mat-card>
-  <mat-card-title>Login</mat-card-title>
+  <mat-card-title i18n>Login</mat-card-title>
   <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit.emit()">
       <p>
         <mat-form-field>
           <input
+            i18n-placeholder
             type="text"
             matInput
             placeholder="Username"
@@ -16,6 +17,7 @@
       <p>
         <mat-form-field>
           <input
+            i18n-placeholder
             type="password"
             matInput
             placeholder="Password"
@@ -26,14 +28,14 @@
 
       <div class="button">
         <button
+          i18n
           mat-raised-button
           color="primary"
           type="submit"
           [disabled]="!loginForm.valid"
           mat-button
+          >Login</button
         >
-          Login
-        </button>
       </div>
     </form>
   </mat-card-content>
