--- a/src/app/components/presentational/products-form-view/products-form-view.component.html
+++ b/src/app/components/presentational/products-form-view/products-form-view.component.html
@@ -90,6 +90,7 @@
         >
         <button
           i18n
+          type="submit"
           mat-raised-button
           color="primary"
           (click)="onSubmit.emit()"
