OPT-5. Component Library Development

--- a/src/app/components/presentational/products-details-view/products-details-view.component.html
+++ b/src/app/components/presentational/products-details-view/products-details-view.component.html
@@ -2,24 +2,24 @@
   <div class="content-header">
     <h1 i18n>Product: {{ product.name }}</h1>
     <div class="header-actions">
-      <app-icon-button
+      <lib-icon-button
         *ngIf="isCustomer"
         [type]="'add_shopping_cart'"
         [color]="'primary'"
         (onClick)="onAddToCart.emit()"
-      ></app-icon-button>
-      <app-icon-button
+      ></lib-icon-button>
+      <lib-icon-button
         *ngIf="isAdmin"
         [type]="'open_in_new'"
         [color]="'primary'"
         (onClick)="onEdit.emit()"
-      ></app-icon-button>
-      <app-icon-button
+      ></lib-icon-button>
+      <lib-icon-button
         *ngIf="isAdmin"
         [type]="'delete'"
         [color]="'warn'"
         (onClick)="onDelete.emit()"
-      ></app-icon-button>
+      ></lib-icon-button>
     </div>
   </div>
   <div class="product-content">
